--- a/.travis.yml
+++ b/.travis.yml
@@ -118,6 +118,7 @@ install:
 - pip install -e .
 - pip install pytest-slack
 before_script:
+- black --check .
 - psql -c 'create database test_ci;' -U postgres
 script:
 - pytest --cov=great_expectations --slack_hook=$SLACK_WEBHOOK --slack_report_link=$TRAVIS_BUILD_WEB_URL
